# hetman-codetable

./: README.md  pyproject.toml
codetable/: __init__.py
codetable/core/: code.py  codetable.py
codetable/core/resources/: types.py
codetable/modes/: i18n.py  msg.py
