[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hetman-codetable"
version = "1.0.2"
description = "Hetman Codetable provides centralized, standardized response codes for APIs and applications. It ensures consistency by treating codes as a single source of truth."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [{ name = "Hetman", email = "degadupeko@my-relay.app" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["hetman-kit-localize>=1.0.0"]

[project.urls]
Homepage = "https://github.com/hetman-app/hetman-codetable"
Documentation = "https://github.com/hetman-app/hetman-codetable"
Repository = "https://github.com/hetman-app/hetman-codetable"
Issues = "https://github.com/hetman-app/hetman-codetable/issues"

[tool.setuptools.packages.find]
where = ["."]
